[package]
name = "tokenizer"
version = "0.1.0"
edition = "2021"

[lib]
name = "tokenizer"
path = "src/lib.rs"

[[bin]]
name = "tokenizer"
path = "src/main.rs"

[dependencies]
roaring = { version = "0.11", features = ["serde"] }
rustc-hash = "2.0"
memmap2 = "0.9"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
walkdir = "2.5"
globset = "0.4"

[dev-dependencies]
tempfile = "3.14"

[profile.release]
lto = true
codegen-units = 1
